# secara

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  debug_ast.py  debug_ruby.py  dump_yaml.py  index.html  install.sh  pyproject.toml  script.js  styles.css  test_secrets_quick.py
.github/: quality_baseline.json  quality_budget.json
.github/workflows/: deploy-website.yml  quality-gate.yml  secara.yml
secara/: __init__.py  cli.py  config.py
secara/detectors/: base.py  config_analyzer.py  generic_analyzer.py  go_analyzer.py  java_analyzer.py  js_analyzer.py  js_signatures.py  php_analyzer.py  python_analyzer.py  ruby_analyzer.py  secrets_detector.py  shell_analyzer.py
secara/output/: confidence.py  fingerprint.py  formatter.py  models.py
secara/quality/: __init__.py  benchmark.py  history.py  metrics.py  report.py
secara/rules/: models.py  rule_loader.py
secara/rules/builtin/: go.yaml  java.yaml  js.yaml  php.yaml  python.yaml  ruby.yaml  secrets.yaml
secara/sca/: __init__.py  dependency_scanner.py
secara/scanner/: baseline.py  cache.py  file_scanner.py  incremental.py  language_engine.py
secara/taint/: __init__.py  interproc_taint.py  python_taint.py  signatures.py
tests/: test_benchmark_quality_gate.py  test_cli_aux_commands.py  test_cli_scan_modes.py  test_cli_scan_runtime.py  test_confidence_calibration.py  test_false_positive_regressions.py  test_file_scanner.py  test_js_analyzer.py  test_new_secrets.py  test_output_json_contract.py  test_output_rich_theme.py  test_owasp_python.py  test_phase4_7_features.py  test_python_analyzer.py  test_quality_metrics.py  test_quality_report.py  test_scale_modes.py  test_secrets.py  test_v06_languages.py
tests/benchmark/: corpus.yaml
tests/samples/: clean.py  vulnerable.go  vulnerable.js  vulnerable.py
website/: CNAME  index.html  script.js  styles.css
