[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secara"
version = "0.1.0"
description = "A high-performance, open-source static code security scanner"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Secara Contributors" }]
keywords = ["security", "static-analysis", "sast", "vulnerability-scanner", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
secara = "secara.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/secara"
Repository = "https://github.com/your-org/secara"
"Bug Tracker" = "https://github.com/your-org/secara/issues"
Changelog = "https://github.com/your-org/secara/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["secara*"]

[tool.setuptools.package-data]
"secara.rules.builtin" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["secara"]
omit = ["tests/*"]
