[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secara"
version = "0.10.2"
description = "A high-performance, open-source static code security scanner"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [{ name = "Secara Contributors" }]
keywords = ["security", "static-analysis", "sast", "vulnerability-scanner", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
secara = "secara.cli:main"

[project.urls]
Homepage = "https://github.com/ilyshoaib/secara"
Repository = "https://github.com/ilyshoaib/secara"
"Bug Tracker" = "https://github.com/ilyshoaib/secara/issues"
Changelog = "https://github.com/ilyshoaib/secara/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["secara*"]

[tool.setuptools.package-data]
"secara.rules.builtin" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["secara"]
omit = ["tests/*"]
